# alpha-learn

./: .gitignore
cpp/: readme.md
cpp/01_book_dissection/4_15/: Makefile  set.cpp  show_hide.cpp  union.cpp  weekend.cpp
cpp/01_book_dissection/5_18_overloading/: triple.cpp
cpp/01_book_dissection/5_1_4/: Makefile  parabola.cpp
cpp/01_book_dissection/5_4/: Makefile  slist.cpp
cpp/01_book_dissection/5_9/: Makefile  rational.cpp
cpp/01_book_dissection/6_3/: quicksort.cpp
cpp/01_book_dissection/7_3_iterator/: stl_iterator.cpp
cpp/02_how2program/mytest/01_inheritance/src/: CMakeLists.txt
cpp/03_hackerrank/time_conversion/: test.cpp
cpp/04_cpp_vt/3/: main.cpp  readme
cpp/04_cpp_vt/4/: main.cpp  readme
cpp/05_sams_21days/: loop.cpp
cpp/enum/: main.cpp
cpp/format_cpp/: clangformat.sh  main.cpp
cpp/func_pointer/: main.cpp
cpp/inheritance/: main.cpp  main1.cpp  main2.cpp
cpp/mutable_member/: Makefile  person.cpp
cpp/namespace/: Makefile  feat1.h
cpp/namespace/test1/: feat2.h  nmspace.cpp
cpp/namespace/test2/: nmspace.cpp
cpp/namespace/test3/: nmspace.cpp  test.cpp  test.h
cpp/others/: compare_operator.cpp
cpp/parse_arg/: test.cpp
cpp/polymorphism/: main.cpp
cpp/prefech/: readme.md
cpp/timing_power2/: power2.cpp
cpp/token_pasting/: Makefile  read.md  token_pasting.cpp
js/: resources
js/learning/: lynda_js_essential_training
php/: resources
plot/: plt_bar3d.py  polys3d_demo.py  readme.md  surface.py
python/multiprocessing/: list_of_dict.py  mp_array.py  test.py
python/sched/: myprog.py
python/swig/: readme.md
(+36 files in other folders)
